[package]
name = "solana-clickhouse"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-database-change = { git = "https://github.com/streamingfast/substreams-sink-database-changes", branch = "develop" }
prost = "0.11"
anyhow = "1"
prost-types = "0.11"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
substreams-solana-utils = { git = "https://github.com/0xpapercut/substreams-solana-utils", tag = "v0.1.4" }
spl-token-substream = { git = "https://github.com/0xpapercut/solana-substreams", tag = "v0.1.4" }
raydium-amm-substream = { git = "https://github.com/0xpapercut/solana-substreams", tag = "v0.1.4" }
mpl-token-metadata-substream = { git = "https://github.com/0xpapercut/solana-substreams", tag = "v0.1.4" }
pumpfun-substream = { git = "https://github.com/0xpapercut/solana-substreams", tag = "v0.1.4" }
system-program-substream = { git = "https://github.com/0xpapercut/solana-substreams", tag = "v0.1.4" }
bs58 = "0.5.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
