[package]
name = "solana-clickhouse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
prost = "0.11"
substreams-database-change = "1.0.0"
anyhow = "1"
prost-types = "0.11"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
spl-token-substream = { path = "../../spl-token-substream" }
raydium-substream = { path = "../../raydium-substream" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
